--- a/TourPlanner/src/main/resources/com/example/tourplanner/hello-view.fxml
+++ b/TourPlanner/src/main/resources/com/example/tourplanner/hello-view.fxml
@@ -3,11 +3,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -18,21 +22,24 @@
 
 <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="407.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tourplanner.HelloController">
    <children>
-      <GridPane alignment="TOP_CENTER" minWidth="-Infinity" prefHeight="80.0" prefWidth="620.0">
+      <GridPane alignment="TOP_CENTER" minWidth="-Infinity" prefHeight="113.0" prefWidth="545.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="370.0" minWidth="10.0" prefWidth="349.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="314.0" minWidth="10.0" prefWidth="71.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <rotationAxis>
             <Point3D x="1.0" y="1.0" z="1.0" />
          </rotationAxis>
          <children>
-            <MenuBar GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
+            <TextField prefHeight="25.0" prefWidth="554.0" promptText="Search..." GridPane.columnSpan="3" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
+            <MenuBar prefHeight="21.0" prefWidth="620.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
@@ -72,48 +79,77 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="362.0" prefWidth="135.0">
+            <VBox prefHeight="362.0" prefWidth="135.0" HBox.hgrow="SOMETIMES">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="136.0" text="Tour List" textAlignment="CENTER" />
+                  <ScrollBar orientation="VERTICAL" VBox.vgrow="SOMETIMES" />
+                  <HBox alignment="CENTER" prefHeight="30.0" prefWidth="132.0">
+                     <children>
+                        <Button mnemonicParsing="false" text="Add" />
+                        <Button mnemonicParsing="false" text="Mod" />
+                        <Button mnemonicParsing="false" text="Del" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="362.0" prefWidth="481.0">
                <children>
                   <GridPane alignment="CENTER" prefHeight="372.0" prefWidth="478.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints maxHeight="168.0" minHeight="10.0" prefHeight="166.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="116.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="167.0" minHeight="10.0" prefHeight="161.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="167.0" minHeight="10.0" prefHeight="161.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <ImageView id="map" fitHeight="150.0" fitWidth="359.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView id="map" fitHeight="150.0" fitWidth="469.0" pickOnBounds="true" GridPane.columnIndex="4" GridPane.columnSpan="4">
                            <image>
                               <Image url="@../../../../../../../../../../../../../Pictures/IMG_4697.jpg" />
                            </image>
                            <GridPane.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              <Insets />
                            </GridPane.margin>
                         </ImageView>
-                        <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.rowSpan="3">
-                           <GridPane.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </GridPane.margin>
-                        </Separator>
-                        <Label text="Average Rating" GridPane.rowIndex="1">
+                        <Label text="Average Rating" GridPane.columnIndex="4" GridPane.rowIndex="1">
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                         </Label>
+                        <ImageView id="avgRating" fitHeight="21.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                        <TableView fixedCellSize="0.0" GridPane.columnIndex="4" GridPane.columnSpan="4" GridPane.rowIndex="2">
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="Duration" />
+                            <TableColumn prefWidth="75.0" text="Difficulty" />
+                              <TableColumn prefWidth="75.0" text="Rating" />
+                              <TableColumn prefWidth="75.0" text="Comment" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </TableView>
+                        <HBox alignment="CENTER" prefHeight="30.0" prefWidth="132.0" GridPane.columnIndex="7" GridPane.rowIndex="1">
+                           <children>
+                              <Button mnemonicParsing="false" text="Add" />
+                              <Button mnemonicParsing="false" text="Mod" />
+                              <Button mnemonicParsing="false" text="Del" />
+                           </children>
+                        </HBox>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets />
                      </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
                   </GridPane>
                </children></VBox>
          </children>
