--- a/TourPlanner/src/main/resources/com/example/tourplanner/MainWindow.fxml
+++ b/TourPlanner/src/main/resources/com/example/tourplanner/MainWindow.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -37,8 +36,7 @@
             <Point3D x="1.0" y="1.0" z="1.0" />
          </rotationAxis>
          <children>
-            <TextField prefHeight="25.0" prefWidth="554.0" promptText="Search..." GridPane.columnSpan="3" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
+             <fx:include fx:id="searchbar" source="Searchbar.fxml" GridPane.columnSpan="3" GridPane.rowIndex="1" />
             <MenuBar prefHeight="21.0" prefWidth="620.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
