--- a/TourPlanner/src/main/resources/com/example/tourplanner/Searchbar.fxml
+++ b/TourPlanner/src/main/resources/com/example/tourplanner/Searchbar.fxml
@@ -2,12 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
 
 <?import javafx.scene.layout.HBox?>
 <HBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.tourplanner.HelloController">
-    <TextField prefHeight="25.0" promptText="Search..." fx:id="searchfield" HBox.hgrow="ALWAYS"/>
-    <Button text="Search" fx:id="searchbutton" />
-
+      fx:controller="com.example.tourplanner.FXApp.view.SearchbarController">
+    <TextField prefHeight="25.0" promptText="Search..." fx:id="searchField" HBox.hgrow="ALWAYS"/>
+    <Button text="Search" fx:id="searchButton" onAction="#searchAction"/>
 </HBox>
