--- a/TourPlanner/src/main/resources/com/example/tourplanner/Searchbar.fxml
+++ b/TourPlanner/src/main/resources/com/example/tourplanner/Searchbar.fxml
@@ -7,5 +7,5 @@
 <HBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.tourplanner.FXApp.view.SearchbarController">
     <TextField prefHeight="25.0" promptText="Search..." fx:id="searchField" HBox.hgrow="ALWAYS"/>
-    <Button text="Search" fx:id="searchButton" onAction="#searchAction"/>
+    <Button text="Search" fx:id="searchButton"/>
 </HBox>
