--- a/TourPlanner/src/main/resources/com/example/tourplanner/TourList.fxml
+++ b/TourPlanner/src/main/resources/com/example/tourplanner/TourList.fxml
@@ -10,9 +10,9 @@
             prefHeight="400.0" prefWidth="600.0">
         <ToolBar>
             <Label text="TourList" />
-            <Button text="Add" fx:id="addTour"/>
-            <Button text="Mod" fx:id="modifyTour"/>
-            <Button text="Del" fx:id="deleteTour"/>
+            <Button text="Add" fx:id="addTour" onAction="#addTour"/>
+            <Button text="Mod" fx:id="modifyTour" onAction="#modTour"/>
+            <Button text="Del" fx:id="deleteTour" onAction="#delTour"/>
         </ToolBar>
         <ListView fx:id="TourListView" VBox.vgrow="ALWAYS"/>
 </VBox>
